# tapyrus-signer

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  bitbucket-pipelines.yml  bitbucket_pipelines.yml  docker-compose.yml  entrypoint.sh
.github/workflows/: build_arm64_image.yml  build_x86_image.yml  ci.yml  ci_on_push.yml  push_docker_image.yml
contrib/init/: README.md  tapyrus-signerd.init
doc/: configuration.md  federation.md  init.md  release-process.md  rpc.yaml  setup.md
doc/release-notes/: release-notes-0.3.0.md  release-notes-0.3.1.md  release-notes-0.4.0.md
docker/: README.md  docker-compose.yml
docker/signers/: federations.toml  tapyrus-signer.toml
snap/: snapcraft.yaml
src/: blockdata.rs  command_args.rs  errors.rs  federation.rs  federation_watcher.rs  key.rs  lib.rs  main.rs  mvs.rs  net.rs  process_master_round.rs  rpc.rs  serialize.rs  sign.rs  signer.rs  signer_node.rs  test_helper.rs  timer.rs  util.rs
src/cli/setup/: aggregate.rs  compute_sig.rs  create_block_vss.rs  create_key.rs  create_node_vss.rs  federation_change.rs  mod.rs  sign.rs  traits.rs
src/crypto/: mod.rs  multi_party_schnorr.rs  test_multi_party_schnorr.rs  vss.rs
src/crypto/multi_party_schnorr/: mock_impl.rs  mod.rs  test.rs  traits.rs
src/signer_node/: mod.rs  node_parameters.rs  node_state.rs  utils.rs
src/signer_node/message_processor/: mod.rs  process_blockparticipants.rs  process_blocksig.rs  process_blockvss.rs  process_candidateblock.rs  process_completedblock.rs  process_nodevss.rs
src/tests/helper/: blocks.rs  keys.rs  mod.rs  net.rs  node_parameters_builder.rs  node_state_builder.rs  node_vss.rs  rpc.rs
tests/: tapyrus-signer.rs
tests/resources/: federations.toml  federations_has_invalid_federation.toml  federations_has_invalid_signature.toml  federations_has_max_block_size.toml  federations_invalid_toml_format.toml  federations_threshold_change.toml  invalid_format.toml  process_blockparticipants.json  process_blocksig.json  process_blockvss.json  process_nodevss.json  signer_config.toml  signer_config_sample.toml  test_vectors.json  vss.json
