cargo-features = ["default-run"]

[package]
name = "tapyrus_siner"
version = "0.1.0"
authors = ["Kohei Taniguchi <kohei@chaintope.com>"]
edition = "2018"
default-run = "node"

[dependencies]
http = "0.1.17"
bitcoin = "0.17.0"
secp256k1 = "0.12.2"
log = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
bitcoin_hashes = "0.3.2"
jsonrpc = "0.11.0"
hex = "0.3.2"
byteorder = "1.3.1"
base64 = "0.10.1"
redis = "0.10.0"
clap = "2.33.0"
