
[package]
name = "tapyrus_signer"
version = "0.4.0"
authors = ["Kohei Taniguchi <kohei@chaintope.com>", "Yukishige Nakajo <nakajo@chaintope.com>"]
edition = "2018"

[dependencies]
http = "0.1.17"
tapyrus = { version = "0.4.8", features = ["use-serde", "rand"] }
secp256k1 = "0.15.3"
log = "0.4.6"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.39"
bitcoin_hashes = "0.3.2"
jsonrpc = "0.12.1"
hex = "0.3.2"
byteorder = "1.3.1"
base64 = "0.10.1"
redis = "0.21.5"
clap = "2.33.0"
toml = "0.5"
curv = { git = "https://github.com/KZen-networks/curv", tag = "v0.2.0", features =  ["ec_secp256k1"]}
sha2 = "0.10.2"
signal-hook = "0.3.14"
libc = "0.2.66"
daemonize = "0.4.1"
lazy_static = "1.4.0"
derive_builder = "0.9.0"
gmp-mpfr-sys = "1.4.8"
regex = "1.5.6"
generic-array = "0.12.4"
rustc-serialize = {version = "0.3.25"}

[features]
dump = []